docs(README): 更新功能列表并修正翻译

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -39,8 +39,8 @@
     "currentVideo": "Current Video",
     "reset": "Back to Selection",
     "promptLabel": "Describe how you want to process the video",
-    "promptPlaceholder": "Example: trim first 10 seconds, add watermark, adjust resolution to 1080p",
-    "promptTip": "Tip: You can provide specific parameters like video duration, resolution, watermark position, etc.",
+    "promptPlaceholder": "Example: trim first 10 seconds, adjust resolution to 1080p",
+    "promptTip": "Tip: You can provide specific parameters like video duration, resolution, etc.",
     "generating": "Generating Command...",
     "generateCommand": "Generate Command",
     "generatedCommand": "Generated Command",
