--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -39,8 +39,8 @@
     "currentVideo": "当前处理视频",
     "reset": "返回选择",
     "promptLabel": "描述您想对视频进行的处理",
-    "promptPlaceholder": "例如：剪掉前10秒，添加水印，调整分辨率为1080p",
-    "promptTip": "提示：可以提供具体的参数，如视频时长、分辨率、水印位置等",
+    "promptPlaceholder": "例如：剪掉前10秒，调整分辨率为1080p",
+    "promptTip": "提示：可以提供具体的参数，如视频时长、分辨率等",
     "generating": "生成命令中...",
     "generateCommand": "生成处理命令",
     "generatedCommand": "生成的命令",
