feat(i18n): 更新多语言文案并优化视频上传功

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -32,7 +32,7 @@
     "dragText": "Drag and drop video files here",
     "orText": "or",
     "browseText": "Browse Files",
-    "acceptedFiles": "Supported formats: MP4, AVI, MOV, MKV, WebM",
+    "acceptedFiles": "All video formats supported",
     "maxSize": "Maximum file size: 500MB"
   },
   "processor": {
